# ethics-curve-lab

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
app/: api.py  dashboard.py
ecl/: ces.py  data_ingestor.py  drift.py  governance.py  metrics_engine.py  model_runner.py  report.py  utils.py
examples/: adult_income_demo.py
notebooks/: README.txt
policies/: default_policy.yaml
reports/: audit_log.json  summary.json
